Product category page: Removed sticky from subnav on mobile, Banner button will smooth scroll to next section, Breadcrumb on single product page is fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,10 @@ body {
   line-height: 24px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Global heading tags default */
 h1,
 h2,
